--- a/Flowers/package.json
+++ b/Flowers/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/svg": "^0.4.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "v-lazy-image": "^2.1.1",
     "vue": "^2.6.14",
     "vue-lazyload": "^1.3.3",
     "vue-server-renderer": "^2.6.14",
