--- a/Flowers/package.json
+++ b/Flowers/package.json
@@ -17,7 +17,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/svg": "^0.4.0",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "core-js": "^3.19.3",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "nuxt": "^2.15.8",
     "v-lazy-image": "^2.1.1",
     "vue": "^2.6.14",
